porting to caveclient

--- a/Meshwork_Examples.ipynb
+++ b/Meshwork_Examples.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "#### 1. Building a Meshwork object\n",
     "\n",
-    "The core of a Meshwork object is, as the name suggests, the mesh. Meshes are one of the fundamental objects in the Dynamic Annotation Framework, and every root id has a unique mesh and can be downloaded through cloudvolume. We call this global version, which is the same for everyone, the *Base Mesh*.\n",
+    "The core of a Meshwork object is, as the name suggests, the mesh. Meshes are one of the fundamental objects in the Connectome Annotation Versioning Engine, and every root id has a unique mesh and can be downloaded through cloudvolume. We call this global version, which is the same for everyone, the *Base Mesh*.\n",
     "\n",
     "However, the Base Mesh often has artifacts that cause problems for analysis. For example, internal structures like vesicles or the nucleus can be segmented separately and have internal mesh vertices or artifacts in across several sections of imagery can cause a continous branch to have a gap. While these don't usually cause obvious problems, they present technical problems. Internal mesh vertices can 'grab' annotations like synapses, and gaps make it impossible to naively compute path distances.\n",
     "\n",
